--- a/index.html
+++ b/index.html
@@ -42,19 +42,18 @@ So let's cut this thing open – using "tmesis" as the Ancient Greeks would call
 <!--In our first exploration of discourse, we're going to think about the wider characteristics or themes of our field or future career. In academia, we do a lot of work narrowing our interest to arrive at a career or profession, often reducing our field to a level of operation or an act. Instead, I would like you to think more broadly about the "wider themes" you associate with your field or future career and its larger significance in improving our world. Yes...improving the world. Thinking back, where do you see exposure to those same "wider themes" in your own life? Those ah-ha moments, lessons, examples, tools, passions, or qualities that suggested this career path to you? Replace the content between <p> and </p> that begins with "Lorem ipsum."-->
 
 <div class="textblock">
-  <h2>Field or Career</h2>
+  <h2>Twine Game</h2>
 
-  <p>I'm currently working.</p><p>I'm currently working.</p>
-  <p>I'm currently working.</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  <p> <a href="sample.pdf">Try out this pdf.</a> </p>
+  <p>This game is situated at the intersections of etc etc etc. It was made to foreground a particular argument that hopefully does x y z.  
+
+<a href="cats.html">Try it out here!</a> </p>
 
 
 
 <!--Replace the image here. You can also control image width and height %. This is the second way we can control the size of images on our website.-->
 
 
-<img src="cats.png" alt="two orange cats on a shed roof-describe the image HERE for accessibility purposes" class="center-img"  style="max-width:100%; max-height:100%;">
+<img src="Catz.png" alt="two orange cats on a shed roof-describe the image HERE for accessibility purposes" class="center-img"  style="max-width:100%; max-height:100%;">
 
 </div>
 <!--in this next section you will explain a little more about your family (what does family means to you? Who are the people that influenced you on this path along which you now stand).-->
